# watering-predictioner

./: .gitignore  Makefile  README.md  data_cleaning.ipynb  model.ipynb  pyproject.toml
data/: cleaned_tarp.csv
models/: model.pkl
src/: config.py  controller.py  data_cleaning.ipynb  helper.py  main.py  measurer.py  model.ipynb  predictioner.py  record.py
src/data/logs/: record-2024_05_31.csv
src/data/responses/: log_2024_05_31.csv
src/models/: model.pkl
tests/: test_predictioner.py
