[tool.poetry]
name = "watering-predictioner"
version = "0.1.0"
description = ""
authors = ["Piotr Karaś <pepe500p@gmail.com>"]
readme = "README.md"
packages = [{include = "watering_predictioner"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
pytest = "^8.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
